# Cryptographic-Security

DPF_Generation/: Readme.md  main  main.cpp  test  test.cpp  x  x.cpp
DPF_updation/: DPF.cpp  Dockerfile  README.md  common.hpp  docker-compose.yml  gen_data.cpp  mpc.hpp  pB.cpp  run.sh  utility.hpp  verify.cpp
DPF_updation/A3/: DPF.hpp  README.md  mpc.hpp  p2.cpp  pB.cpp  utility.hpp  verify.cpp
DPF_updation/A4/: eval.py
DPF_updation/data/: DPF0.txt  DPF1.txt  DPF_NEG.txt  S0.txt  S1.txt  U0.txt  U1.txt  V0.txt  V1.txt  metrics.csv  mpc_V_results.txt  mpc_results.txt  queries.txt  queries_users.txt
MPC_Protocol_OT_Extension/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
MPC_Protocol_OT_Extension/src/apps/: gen_data.cpp  p0.cpp  p1.cpp  p2.cpp  verify.cpp
MPC_Protocol_OT_Extension/src/common/: common.hpp  shares.hpp  types.hpp
MPC_Protocol_OT_Extension/src/io/: utility.cpp  utility.hpp
MPC_Protocol_OT_Extension/src/mpc/: beaver.hpp  mpc.hpp
MPC_Protocol_OT_Extension/src/net/: channel.cpp  channel.hpp
MPC_Protocol_OT_Extension/src/oblivious_index/: private_index_select.cpp  private_index_select.hpp
MPC_Protocol_OT_Extension/src/ot/: base_ot.cpp  base_ot.hpp  kkrt.cpp  kkrt.hpp  ot_extension.cpp  ot_extension.hpp
MPC_communication/: Dockerfile  README.md  common.hpp  docker-compose.yml  gen_data.cpp  mpc.hpp  p2.cpp  pB.cpp  run.sh  shares.hpp  utility.hpp  verify.cpp
MPC_communication/.cph/: .x.cpp_697105a2f8632f6551eff3df8c157a25.prob
MPC_communication/data/: U0.txt  U1.txt  V0.txt  V1.txt  mpc_results.txt  queries.txt
(+5 files in other folders)
